--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(amr_navigation_utils_ros)
 add_compile_options(-std=c++17 -O2 -g)
 
 find_package(catkin REQUIRED COMPONENTS
+  geometry_msgs
   pcl_ros
   roscpp
   sensor_msgs
@@ -12,15 +13,41 @@ find_package(catkin REQUIRED COMPONENTS
 ###################################
 ## catkin specific configuration ##
 ###################################
-catkin_package()
+catkin_package(
+  INCLUDE_DIRS include
+  LIBRARIES ${PROJECT_NAME}
+)
 
 ###########
 ## Build ##
 ###########
-include_directories(${catkin_INCLUDE_DIRS})
+include_directories(
+  include
+  ${catkin_INCLUDE_DIRS}
+)
+
+add_library(${PROJECT_NAME} SHARED
+  src/footprint.cpp
+)
+add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+
+add_executable(footprint_publisher_node src/footprint_publisher.cpp)
+target_link_libraries(footprint_publisher_node ${catkin_LIBRARIES} ${PROJECT_NAME})
 
 add_executable(pointcloud_angle_filter_node src/pointcloud_angle_filter.cpp)
 target_link_libraries(pointcloud_angle_filter_node ${catkin_LIBRARIES})
+
+#############
+## INSTALL ##
+#############
+install(TARGETS ${PROJECT_NAME}
+  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+)
+install(DIRECTORY include/${PROJECT_NAME}
+  DESTINATION ${CATKIN_GLOBAL_INCLUDE_DESTINATION}
+)
 
 #############
 ## Testing ##
